# iterlib

./: .clang-format  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  DynamicTest.cc  INSTALL  INSTALL.md  LICENSE  PATENTS  README.md
cmake/modules/: Deb.cmake  FindFolly.cmake  FindGtest.cmake  FindRocksdb.cmake  Rpm.cmake  deb_packaging.cmake
doc/: Internals.md
include/iterlib/: AndIterator-inl.h  AndIterator.h  CountIterator-inl.h  CountIterator.h  DifferenceIterator-inl.h  DifferenceIterator.h  FilterIterator-inl.h  FilterIterator.h  FutureIterator.h  GroupByIterator-inl.h  GroupByIterator.h  Item.h  Iterator-inl.h  Iterator.h  LetIterator.h  LimitIterator-inl.h  LimitIterator.h  MergeIterator-inl.h  MergeIterator.h  NestIterator.h  OrIterator-inl.h  OrIterator.h  OrderByIterator-inl.h  OrderByIterator.h  ProjectIterator-inl.h  ProjectIterator.h  QueryConstants.h  RandomIterator-inl.h  RandomIterator.h  ReverseIterator-inl.h  ReverseIterator.h  RocksDBIterator.h  WrappedIterator-inl.h  WrappedIterator.h
include/iterlib/variant/: dynamic-detail.h  dynamic-inl.h  dynamic-iter.h  dynamic.h
iterlib/: dynamic.h
iterlib/variant/: dynamic-folly.h  dynamic-inl.h  dynamic-json.h  dynamic.h
python/: README.python  execute.py  filterexpr.py  item.py  kvstore.py  mock.py  nested_tests.py  queries.json  sexp.py  test_data_1.txt  test_data_2.txt  tests.py  validate.py  visitor.py  walk.py
src/: AndIterator.cpp  CountIterator.cpp  DifferenceIterator.cpp  Dynamic.cc  FilterIterator.cpp  GroupByIterator.cpp  Item.cpp  Iterator.cpp  LimitIterator.cpp  MergeIterator.cpp  OrIterator.cpp  OrderByIterator.cpp  ProjectIterator.cpp  RandomIterator.cpp  ReverseIterator.cpp  WrappedIterator.cpp
tests/: DynamicTest.cc  DynamicTest.cpp  ExpectIterator.h  FilterIteratorTest.cpp  GroupByIteratorTest.cpp  IteratorTest.cpp  LetIteratorTest.cpp  MergeIteratorTest.cpp  NestIteratorTest.cpp  OrderByIteratorTest.cpp  ProjectIteratorTest.cpp  RocksDBIteratorTest.cpp
